[package]
name = "xan-log"
version = "1.2.0"
edition = "2024"
authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]
description = "My personal logger"
repository = "https://github.com/Xanthorrhizol/xan-log"
readme = "README.md"
license = "MIT"
keywords = ["log", "logger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tracing = ["tracing-subscriber/std", "tracing-subscriber/env-filter"]

[dependencies]
chrono = "0.4.31"
log = { version = "0.4.20", features = ["std", "kv_unstable"] }
serde_json = "1.0.107"
tracing-subscriber = { version = "0.3.22", optional = true }
